--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.17.0",
+    "framer-motion": "^11.18.0",
     "lucide-react": "^0.469.0",
+    "mongoose": "^8.9.4",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
